added disconnect and disconnectAndClose methods